--- a/Prototype/Prototype.cbp
+++ b/Prototype/Prototype.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Builder" />
+		<Option title="Prototype" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Builder" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Prototype" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Builder" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Prototype" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -33,10 +33,9 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="README.md" />
-		<Unit filename="builder.hh" />
-		<Unit filename="builderAndDoor.cpp" />
-		<Unit filename="door.hh" />
 		<Unit filename="main.cpp" />
+		<Unit filename="prototype.cpp" />
+		<Unit filename="prototype.hh" />
 		<Extensions>
 			<code_completion />
 			<envvars />
