--- a/ResponsibilityChain/ResponsibilityChain.cbp
+++ b/ResponsibilityChain/ResponsibilityChain.cbp
@@ -32,7 +32,10 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="README.md" />
 		<Unit filename="main.cpp" />
+		<Unit filename="responsibilitychain.cpp" />
+		<Unit filename="responsibilitychain.hh" />
 		<Extensions>
 			<code_completion />
 			<envvars />
