--- a/Strategy/Strategy.cbp
+++ b/Strategy/Strategy.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Visitor" />
+		<Option title="Strategy" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Visitor" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Strategy" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Visitor" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Strategy" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -32,10 +32,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
-		<Unit filename="REAMDE.md" />
 		<Unit filename="main.cpp" />
-		<Unit filename="visitor.cpp" />
-		<Unit filename="visitor.hh" />
 		<Extensions>
 			<code_completion />
 			<envvars />
